tests-trybuild/tests/riscv-rt/post_init/fail_async.stderr
error: `#[post_init]` function must have signature `[unsafe] fn([usize])`
 --> tests/riscv-rt/post_init/fail_async.rs:2:1
  |
2 | async fn before_main() {}
  | ^^^^^
