tests-trybuild/tests/riscv-rt/post_init/fail_async.rs
#[riscv_rt::post_init]
async fn before_main() {}

fn main() {}
